--- a/specRunner.html
+++ b/specRunner.html
@@ -12,6 +12,8 @@
 		<script type="text/javascript" src="scripts/angular-mocks.js"></script>
 		<script type="text/javascript" src="app/app.js"></script>
 		<script type="text/javascript" src="tests/controllerSpec.js"></script>
+		<script type="text/javascript" src="tests/directiveSpec.js"></script>
+		<script type="text/javascript" src="tests/serviceSpec.js"></script>
 	</head>
 	<body>
 
